[gd_scene load_steps=12 format=2]

[ext_resource path="res://Juego/Meteoritos/MeteoritosSpawner.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Meteoritos/SectorMeteoritos.gd" type="Script" id=2]
[ext_resource path="res://Juego/Meteoritos/AdvertenciaSFX.ogg" type="AudioStream" id=3]

[sub_resource type="PhysicsMaterial" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 971.213, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 11.0126, 545.542 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1416.08, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 13.3659, 911.5 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://TemporalAssets/Fonts/Kenney Future.ttf"

[sub_resource type="DynamicFont" id=7]
size = 45
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 6 )

[sub_resource type="Animation" id=8]
resource_name = "Advertencia"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AdvertenciaSFX:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( -0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AdvertenciaSFX:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( -0.1, 3.1, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -9.697, -25.0, -45.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/ColorRect/Label:custom_fonts/font:size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5 ),
"transitions": PoolRealArray( 4, 1, 4, 1, 4, 1, 4, 1, 4, 1, 4 ),
"update": 1,
"values": [ 45, 55, 45, 55, 45, 55, 45, 55, 45, 55, 45 ]
}

[node name="SectorMeteoritos" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ -900.472, 900.133, -540.31, 540.281 ],
"_edit_vertical_guides_": [ -1400.33, 1400.65, -960.931, 960.369 ]
}

[node name="BordeNavePlayer" type="Node2D" parent="."]

[node name="BordeSuperior" type="StaticBody2D" parent="BordeNavePlayer"]
collision_layer = 0
physics_material_override = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordeNavePlayer/BordeSuperior"]
position = Vector2( 0, -540 )
shape = SubResource( 2 )

[node name="BordeInferior" type="StaticBody2D" parent="BordeNavePlayer"]
collision_layer = 0
physics_material_override = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordeNavePlayer/BordeInferior"]
position = Vector2( 0, 540 )
shape = SubResource( 2 )

[node name="BordeIzquierdo" type="StaticBody2D" parent="BordeNavePlayer"]
collision_layer = 0
physics_material_override = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordeNavePlayer/BordeIzquierdo"]
position = Vector2( -960, 0 )
shape = SubResource( 3 )

[node name="BordeDerecho" type="StaticBody2D" parent="BordeNavePlayer"]
collision_layer = 0
physics_material_override = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordeNavePlayer/BordeDerecho"]
position = Vector2( 960, 0 )
shape = SubResource( 3 )

[node name="DetectorFueraZona" type="Node2D" parent="."]

[node name="detector" type="Area2D" parent="DetectorFueraZona"]
collision_layer = 0
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorFueraZona/detector"]
position = Vector2( 0, -900 )
shape = SubResource( 4 )

[node name="Area2D2" type="Area2D" parent="DetectorFueraZona"]
collision_layer = 0
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorFueraZona/Area2D2"]
position = Vector2( 0, 900 )
shape = SubResource( 4 )

[node name="Area2D3" type="Area2D" parent="DetectorFueraZona"]
collision_layer = 0
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorFueraZona/Area2D3"]
position = Vector2( -1400, 0 )
shape = SubResource( 5 )

[node name="Area2D4" type="Area2D" parent="DetectorFueraZona"]
collision_layer = 0
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorFueraZona/Area2D4"]
position = Vector2( 1400, 0 )
shape = SubResource( 5 )

[node name="Spawners" type="Node2D" parent="."]

[node name="MeteoritosSpawner" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1150, 0 )
direccion = Vector2( 1, 0 )

[node name="MeteoritosSpawner2" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1150, 0 )
direccion = Vector2( -1, 0 )

[node name="MeteoritosSpawner3" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 0, 750 )
direccion = Vector2( 0, -1 )

[node name="MeteoritosSpawner7" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1150, 750 )
direccion = Vector2( -1, -1 )

[node name="MeteoritosSpawner8" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1150, 750 )
direccion = Vector2( 1, -1 )

[node name="MeteoritosSpawner9" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -575, 750 )
direccion = Vector2( 1, -1 )

[node name="MeteoritosSpawner10" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 575, 750 )
direccion = Vector2( -1, -1 )

[node name="MeteoritosSpawner4" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 0, -750 )
direccion = Vector2( 0, 1 )

[node name="MeteoritosSpawner5" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1150, -753.175 )
direccion = Vector2( -1, 1 )

[node name="MeteoritosSpawner15" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1150, -375 )
direccion = Vector2( -1, 1 )

[node name="MeteoritosSpawner16" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1150, 375 )
direccion = Vector2( -1, -1 )

[node name="MeteoritosSpawner6" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1150, -750 )

[node name="MeteoritosSpawner13" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1150, -375 )

[node name="MeteoritosSpawner14" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1150, 375 )
direccion = Vector2( 1, -1 )

[node name="MeteoritosSpawner11" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -575, -750 )

[node name="MeteoritosSpawner12" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 575, -750 )
direccion = Vector2( -1, 1 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0, 0, 0.184314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -675.5
margin_top = -211.5
margin_right = 675.5
margin_bottom = 211.5
custom_fonts/font = SubResource( 7 )
text = "Â¡ADVERTENCIA!
LLUVIA DE METEORITOS INMINENTE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdvertenciaSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -45.0
bus = "SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Advertencia"
anims/Advertencia = SubResource( 8 )

[node name="Camera2D" type="Camera2D" parent="."]
[connection signal="body_entered" from="DetectorFueraZona/detector" to="." method="_on_body_entered"]
[connection signal="body_entered" from="DetectorFueraZona/Area2D2" to="." method="_on_body_entered"]
[connection signal="body_entered" from="DetectorFueraZona/Area2D3" to="." method="_on_body_entered"]
[connection signal="body_entered" from="DetectorFueraZona/Area2D4" to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
